# juju-k8s-crashdump

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yaml  unit-tests.yaml  validate_workflows.yaml
actions/juju-k8s-crashdump/: action.yaml
juju_k8s_crashdump/: main.py
juju_k8s_crashdump/cmd/: __init__.py  cmd.py
juju_k8s_crashdump/juju/: __init__.py  client.py
juju_k8s_crashdump/juju_cmd/: __init__.py  client.py  structures.py
juju_k8s_crashdump/k8s/: __init__.py  client.py
juju_k8s_crashdump/k8s_cmd/: __init__.py  client.py
juju_k8s_crashdump/serializeable_dataclass/: __init__.py  dataclass.py
scripts/: format.sh  lint.sh  unit-tests.sh
tests/: test_juju_cmd_client.py
tests/unit/juju_cmd/: test_client.py
